--- a/test/fixtures/api_keys.yml
+++ b/test/fixtures/api_keys.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: api_keys
+#
+#  id         :bigint           not null, primary key
+#  app_name   :string
+#  token      :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   app_name: MyString
